--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.flex-row {
+  display: flex;
+  flex-direction: row;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  border-bottom: 1px solid #e5e5e5;
+  margin: 5px;
+  padding: 15px 10px;
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar a {
+  margin: 2px;
+  padding: 2px;
+  border-right: 1px solid rgb(65, 63, 63);
+}
+
+.list li {
+  list-style: none;
+  justify-content: space-evenly;
+  align-items: stretch;
+  align-content: flex-start;
+  border-bottom: 1px solid #252424;
+  padding: 1px;
+  margin: 1px;
+}
+
+.list li:nth-child(even) {
+  background-color: darkgrey;
+}
+
+.list li div {
+  text-align: left;
+  width: 25%;
 }
